Baubo, a busy woman

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: "Commit files"
         run: |
-          git config --local user.name "Suck me hidik"
+          git config --local user.name "xxAROX"
           git add pack/manifest.json
           git commit -m "Updated pack version"
 
