--- a/pack/manifest.json
+++ b/pack/manifest.json
@@ -25,5 +25,11 @@
                 5
             ]
         }
-    ]
+    ],
+    "metadata": {
+        "authors": [
+            "xxAROX"
+        ],
+        "url": "https://github.com/xxarox"
+    }
 }
