--- a/pack/manifest.json
+++ b/pack/manifest.json
@@ -7,7 +7,7 @@
         "version": [
             1,
             1,
-            10
+            11
         ],
         "min_engine_version": [
             1,
@@ -30,6 +30,6 @@
         "authors": [
             "xxAROX"
         ],
-        "url": "https://github.com/xxarox"
+        "url": "https:\/\/github.com\/xxarox"
     }
 }
