--- a/pack/manifest.json
+++ b/pack/manifest.json
@@ -2,7 +2,7 @@
     "format_version": 2,
     "header": {
         "name": "RyZer.BE",
-        "description": "Provided by RyZerBE-Team",
+        "description": "Provided by YockerFX",
         "uuid": "b43c0a55-d349-4f86-87eb-b61402598308",
         "version": [
             1,
